# transporter

./: .gitignore  Cargo.toml  README.md
.config/: default.toml  rtd.toml  rtd24.toml  structure.toml
assets/: doc-before-content.html  doc-header.html
structures/: homogeneous_1e22_icm.toml  homogeneous_1e23_icm3.toml  nlrtd.toml  rtd.toml  rtd24.toml  single.toml  structure.toml  structuregaas.toml  structureinternal.toml
test_structures/: homogeneous_1e24_im3.toml
transporter-mesher/: Cargo.toml
transporter-mesher/src/: connectivity.rs  lib.rs  mesh.rs
transporter-mesher/src/generate/: mod.rs  segment_1d.rs
transporter-mesher/src/primitives/: mod.rs
transporter-negf/: Cargo.toml
transporter-negf/benches/: recursive_greens_functions.rs
transporter-negf/src/: constants.rs  error.rs  fermi.rs  lib.rs  main.rs
transporter-negf/src/app/: calculations.rs  configuration.rs  error.rs  mod.rs  styles.rs  telemetry.rs  tracker.rs
transporter-negf/src/app/tui/: mod.rs
transporter-negf/src/app/tui/app/: actions.rs  mod.rs  state.rs  ui.rs
transporter-negf/src/app/tui/inputs/: events.rs  keys.rs  mod.rs
transporter-negf/src/app/tui/io/: handler.rs  mod.rs
transporter-negf/src/app/tui/rayon_async/: async_handle.rs  async_threadpool.rs  global.rs  mod.rs
transporter-negf/src/device/: mod.rs  reader.rs
transporter-negf/src/device/info_desk/: materials.rs  mod.rs
transporter-negf/src/greens_functions/: aggregate.rs  dense.rs  mixed.rs  mod.rs  recursive.rs  sparse.rs  tridiagonal.rs
transporter-negf/src/greens_functions/methods/: aggregate.rs  dense.rs  mixed.rs  mod.rs  recursive.rs  sparse.rs
transporter-negf/src/greens_functions/nalgebra_gf/: aggregate.rs  dense.rs  mixed.rs  mod.rs  recursive.rs  sparse.rs
transporter-negf/src/greens_functions/ndarray_gf/: mod.rs  recursive.rs
transporter-negf/src/hamiltonian/: global.rs  local.rs  mod.rs
transporter-negf/src/inner_loop/: methods.rs  mod.rs
transporter-negf/src/outer_loop/: convergence.rs  methods.rs  mod.rs
transporter-negf/src/outer_loop/poisson/: mod.rs
transporter-negf/src/outer_loop/poisson/operator/: global.rs  local.rs  mod.rs
transporter-negf/src/postprocessor/: charge_and_current.rs  mod.rs  postprocess.rs
transporter-negf/src/self_energy/: contact.rs  lo_phonon.rs  mod.rs
transporter-negf/src/self_energy/lo_phonon/: localised.rs  mod.rs  nalgebra.rs  ndarray.rs
transporter-negf/src/spectral/: constructors.rs  energy.rs  mod.rs  wavevector.rs
transporter-negf/src/utilities/: assemblers.rs  matrices.rs  mod.rs
transporter-negf/utilities/: Cargo.toml
transporter-negf/utilities/src/: lib.rs  structures.rs
transporter-negf/utilities/test_structures/: single.toml
transporter-poisson/: Cargo.toml  transporter-poisson.aux  transporter-poisson.blg  transporter-poisson.fdb_latexmk  transporter-poisson.fls  transporter-poisson.tex
transporter-poisson/src/: allocators.rs  lib.rs  poisson1dsource.rs
transporter-poisson/src/jacobian/: mod.rs
transporter-poisson/src/operator/: mod.rs
transporter-poisson/src/solve/: mod.rs
transporter-poisson/src/source/: mod.rs
