[package]
name = "transporter-negf"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.6.1"
config = { version = "0.12.0", default-features = false, features = ["toml"] }
nalgebra = { version = "=0.30.0", features = ["compare", "serde-serialize"] }
nalgebra-sparse = { version = "0.6.0", features = ["compare", "proptest-support"] }
num-complex = "0.4.0"
num-traits = "0.2.14"
numeric_literals = "0.2.0"
serde = { version = "1.0.136", features = ["derive"] }
transporter-mesher = { path = "../transporter-mesher" }
transporter-poisson = { path = "../transporter-poisson" }

[dev-dependencies]
approx = "0.5.1"
matrixcompare = { version = "0.3.0", features = ["proptest-support"] }
proptest = "1.0.0"
rand = "0.8.5"
