[package]
name = "transporter-negf"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = { git = "https://github.com/argmin-rs/argmin", features = ["nalgebral"] }
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.6.1"
config = { version = "0.12.0", default-features = false, features = ["toml"] }
nalgebra = { version = "=0.30.0", features = ["compare", "serde-serialize"] }
nalgebra-sparse = { version = "0.6.0", features = ["compare", "proptest-support"] }
ndarray = "0.15.3"
num-complex = "0.4.0"
num-traits = "0.2.14"
numeric_literals = "0.2.0"
serde = { version = "1.0.136", features = ["derive"] }
transporter-mesher = { path = "../transporter-mesher" }
transporter-poisson = { path = "../transporter-poisson" }
supports-color = "1.3.0"
owo-colors = { version = "3.3.0", features = ["supports-color", "supports-colors"] }
console = "0.15.0"
tracing = "0.1.33"
tracing-log = { version = "0.1.2", features = ["env_logger"] }
log = "0.4.16"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt", "registry"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
tracing-slog = "0.1.0"
slog = "2.7.0"
itertools = "0.10.3"
rayon = "1.5.2"

[dependencies.conflux]
git = "https://github.com/cgubbin/conflux"
branch = "nalgebra"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.3.5"
matrixcompare = { version = "0.3.0", features = ["proptest-support"] }
proptest = "1.0.0"
rand = "0.8.5"
utilities = { path = "utilities" }

[profile.bench]
debug = true

[[bench]]
name = "recursive_greens_functions"
harness = false
