[package]
name = "transporter-negf"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# argmin = { git = "https://github.com/argmin-rs/argmin", features=["ndarrayl"]}
# argmin = { git = "https://github.com/cgubbin/argmin", tag="v0.5.1", features=["nalgebral"]}
argmin = { version = "0.5.1", features=["ndarrayl"]}
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.6.1"
config = { version = "0.12.0", default-features = false, features = ["toml"] }
nalgebra = { version = "=0.30.0", features = ["compare", "serde-serialize"] }
nalgebra-sparse = { version = "0.6.0", features = ["compare", "proptest-support"] }
ndarray = { version = "0.15", features=["blas", "approx"]}
blas-src = { version = "0.8.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
num-complex = "0.4.0"
num-traits = "0.2.14"
numeric_literals = "0.2.0"
serde = { version = "1.0.136", features = ["derive"] }
transporter-mesher = { path = "../transporter-mesher" }
supports-color = "1.3.0"
owo-colors = { version = "3.3.0", features = ["supports-color", "supports-colors"] }
console = "0.15.0"
tracing = "0.1.33"
tracing-log = { version = "0.1.2", features = ["env_logger"] }
log = "0.4.16"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt","json", "registry"] }
indicatif = { version = "0.16.2", features = ["rayon"] }
tracing-slog = "0.1.0"
slog = "2.7.0"
itertools = "0.10.3"
rayon = "1.5.2"
thiserror = "1.0.30"
anyhow = "1.0.56"
miette = { version = "4.5.0", features = ["fancy"] }
tracing-appender = "0.2.2"
sprs = {version = "0.11.0"}
ndarray-linalg = { git = "https://github.com/cgubbin/ndarray-linalg", features = ["intel-mkl-system"]}
ndarray-stats = "0.5.0"
approx = "0.5.1"
tui = { version = "0.17.0", features = ["crossterm"], optional=true}
crossterm = {version = "0.23.2", optional=true}
tokio = { version = "1.18.2", features = ["rt", "sync", "macros", "rt-multi-thread"], optional=true}
tui-logger = {version = "0.7", optional=true}
glob = {version = "0.3", optional=true}

[dependencies.conflux]
git = "https://github.com/cgubbin/conflux"
branch = "nalgebra"

[features]
cli = []
tui = ["dep:tui", "dep:tokio", "dep:tui-logger", "dep:glob", "dep:crossterm"]

[dev-dependencies]
criterion = "0.3.5"
matrixcompare = { version = "0.3.0", features = ["proptest-support"] }
proptest = "1.0.0"
rand = "0.8.5"
utilities = { path = "utilities" }

[profile.release]
codegen-units = 1

[profile.bench]
codegen-units = 1 

[[bench]]
name = "recursive_greens_functions"
harness = false


# [[bench]]
# name = "simd_matrices"
# harness = false
