[package]
name = "transporter-poisson"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
itertools = "0.10.3"
nalgebra = "0.30"
nalgebra-sparse = "0.6.0"
transporter-mesher = { path = '../transporter-mesher' }

[dev-dependencies]
approx = "0.5.1"
